# douban-crawler

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  run.py
data/: douban_group.db
data/debug/: no_table_20260408_224615.html  no_table_20260408_224637.html  no_table_20260408_235136.html  no_table_20260408_235140.html  no_table_20260408_235146.html  no_table_20260408_235154.html  no_table_20260408_235201.html  no_table_20260408_235205.html  no_table_20260408_235210.html  no_table_20260408_235213.html  no_table_20260408_235217.html  no_table_20260408_235248.html  no_table_20260408_235256.html  no_table_20260408_235302.html  no_table_20260408_235307.html  no_table_20260408_235310.html  no_table_20260408_235315.html  no_table_20260408_235321.html  no_table_20260408_235324.html  no_table_20260408_235328.html  no_table_20260408_235332.html  no_table_20260408_235338.html  no_table_20260408_235344.html  no_table_20260408_235351.html  no_table_20260408_235357.html  no_table_20260408_235359.html  no_table_20260408_235424.html  no_table_20260408_235429.html  no_table_20260408_235436.html  no_table_20260408_235442.html  no_table_20260408_235450.html  no_table_20260408_235455.html  no_table_20260408_235458.html  no_table_20260408_235501.html  no_table_20260408_235506.html  no_table_20260408_235514.html  no_table_20260408_235522.html  no_table_20260408_235527.html  no_table_20260408_235533.html  no_table_20260408_235538.html  (+13 more)
douban_crawler/: __init__.py  anti_crawl.py  cli.py  config.py  crawler.py  fetcher.py  models.py  parser.py  storage.py
(+2 files in other folders)
