[project]
name = "douban-group-crawler"
version = "0.1.0"
description = "豆瓣小组帖子爬取与分析工具"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "mcp>=1.10.0",
    "fake-useragent>=1.5.0",
]

[project.scripts]
douban-crawler = "douban_crawler.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
